--- a/src/AnyStatus.Plugins/AnyStatus.Plugins.csproj
+++ b/src/AnyStatus.Plugins/AnyStatus.Plugins.csproj
@@ -88,6 +88,7 @@
     <Compile Include="VSTS\Build\VstsBuildMonitor.cs" />
     <Compile Include="VSTS\Build\VstsBuildTrigger.cs" />
     <Compile Include="VSTS\Build\VstsBuild_v1.cs" />
+    <Compile Include="VSTS\Release\OpenVstsEnvironmentPage.cs" />
     <Compile Include="VSTS\Release\OpenVstsReleasePage.cs" />
     <Compile Include="VSTS\Release\VSTSReleaseEnvironment.cs" />
     <Compile Include="VSTS\Release\VSTSReleaseMonitor.cs" />
@@ -149,4 +150,7 @@
     </ItemGroup>
     <Copy SourceFiles="@(NuGetPackages)" DestinationFolder="C:\nuget" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetFileName)" "C:\Users\ershalei\AppData\Roaming\AnyStatus\$(TargetFileName)"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
